<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Bat Finder</string>
    <string name="nav_header_subtitle">by Kevin Rousseeuw</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home">Bats</string>

    <string name="app_name">BatFinder</string>
    <string name="title_activity_bat_list" translatable="false">BatListActivity</string>
    <string name="batimage" translatable="false">batimage</string>
    <string name="title_activity_bat_detail" translatable="false">BatDetailActivity</string>
    <string name="test_bat_common_name" translatable="false">Brown Long Eared Batto</string>
    <string name="test_bat_scientific_name" translatable="false">Lasiurus Testoralis</string>
    <string name="test_bat_bodylength" translatable="false">10 to 50 mm</string>
    <string name="test_bat_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="buttontext_record_observation">Record Observation</string>
    <string name="buttontext_view_observations">View Observations</string>
    <string name="apiurl" translatable="false">http://batfinderapi.azurewebsites.net/</string>
    <string name="test_imageauthor" translatable="false">TextView</string>
    <string name="title_activity_bat_list_drawer" translatable="false">BatListDrawerActivity</string>
    <string name="menu_sponsors">Sponsors</string>
    <string name="sponsor_blurb">Want to learn more about bats?</string>
    <string name="subtitle" translatable="false">subtitle</string>
    <string name="title" translatable="false">Title</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="bodyLengthString">%1$s to %2$s mm.</string>
    <string name="photoCreditString">Photo: © %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="dutchLanguageCode" translatable="false">nl</string>
    <string name="title_activity_observation_map">Map</string>
</resources>
