<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="172dp"
        android:layout_height="87dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subtitle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/subtitle"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>